WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37967
Printing Core Animation-based plug-ins is broken
https://bugs.webkit.org/show_bug.cgi?id=37967
Summary
Printing Core Animation-based plug-ins is broken
Simon Fraser (smfr)
Reported
2010-04-21 21:22:01 PDT
When printing a page that contains plug-ins using the Core Animation rendering model, those plug-ins fail to show up in the print output.
Attachments
Patch
(1.89 KB, patch)
2010-04-21 21:24 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-04-21 21:24:48 PDT
Created
attachment 54022
[details]
Patch
Simon Fraser (smfr)
Comment 2
2010-04-21 21:39:17 PDT
http://trac.webkit.org/changeset/58051
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug