2010-04-21  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        Printing Core Animation-based plug-ins is broken
        https://bugs.webkit.org/show_bug.cgi?id=37967

        When we do a "flattening" paint because of printing, we need to stash
        the flattening flag in the FrameView's m_paintBehavior, because
        WebBaseNetscapePluginView needs to find it there to decide whether
        to grab a bitmap for printing, for CA plug-ins.

        * page/FrameView.cpp:
        (WebCore::FrameView::paintContents):

Canonical link: https://commits.webkit.org/49332@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58051 268f45cc-cd09-0410-ab3c-d52691b4dbfc